--- a/src/Reports/NhaCungCap.jrxml
+++ b/src/Reports/NhaCungCap.jrxml
@@ -34,16 +34,31 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="79" splitType="Stretch">
+			<staticText>
+				<reportElement x="198" y="40" width="161" height="39" uuid="9310e282-b157-4ce8-9a57-ed561b69812b"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[BÁO CÁO DANH SÁCH NHÂN VIÊN]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="0" width="359" height="20" uuid="241f618a-62cd-4fde-9612-d3db19e3c3f3"/>
+				<textElement>
+					<font size="15" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Phần mềm quản lý kho siêu thị S.O.S ]]></text>
+			</staticText>
+		</band>
 	</title>
 	<pageHeader>
 		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch"/>
+		<band height="9" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="116" splitType="Stretch">
 			<textField>
 				<reportElement x="132" y="11" width="408" height="20" uuid="23e866b0-0c10-4556-99ea-83b06b3edc1f"/>
 				<textFieldExpression><![CDATA[$F{ten_nha_cc}]]></textFieldExpression>
@@ -66,23 +81,23 @@
 			</textField>
 			<staticText>
 				<reportElement x="32" y="11" width="100" height="20" uuid="03ba24e9-60fc-4d06-b1ca-d3c795e36fc7"/>
-				<text><![CDATA[ten_nha_cc]]></text>
+				<text><![CDATA[Nhà cung cấp :]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="32" y="31" width="100" height="20" uuid="8e91e330-4a3e-4cf3-9e51-7e884e484868"/>
-				<text><![CDATA[ten_dai_dien]]></text>
+				<text><![CDATA[Đại diện :]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="32" y="51" width="100" height="20" uuid="c88c9505-f58d-456b-908a-64d28ed2fffc"/>
-				<text><![CDATA[sdt]]></text>
+				<text><![CDATA[SĐT :]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="32" y="71" width="100" height="20" uuid="59c344ec-770a-4517-9b2c-426846aab2b7"/>
-				<text><![CDATA[dia_chi]]></text>
+				<text><![CDATA[Địa chỉ :]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="32" y="91" width="100" height="20" uuid="fb21f29c-9701-4763-8a3a-7c4942d5aac1"/>
-				<text><![CDATA[email]]></text>
+				<text><![CDATA[Email :]]></text>
 			</staticText>
 		</band>
 	</detail>
