--- a/src/Reports/NhanVien.jrxml
+++ b/src/Reports/NhanVien.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8dad1606-43d8-4986-87eb-861469510469">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="11"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT * FROM `nhan_vien` WHERE nhan_vien.id_exist =1]]>
 	</queryString>
@@ -31,30 +31,45 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch"/>
+		<band height="79" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="0" width="359" height="20" uuid="b7efaf51-deea-4d93-82b0-f23a292247c1"/>
+				<textElement>
+					<font size="15" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Phần mềm quản lý kho siêu thị S.O.S ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="198" y="40" width="161" height="39" uuid="979dbd2b-374f-4d86-8224-c50c6dce8cbe"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[BÁO CÁO DANH SÁCH NHÂN VIÊN]]></text>
+			</staticText>
+		</band>
 	</title>
 	<pageHeader>
 		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch"/>
+		<band height="25" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="93" splitType="Stretch">
+		<band height="87" splitType="Stretch">
 			<textField>
-				<reportElement x="141" y="4" width="100" height="20" uuid="6a2c7bca-7f2c-406a-9f2b-4a8effaa86bd"/>
+				<reportElement x="141" y="4" width="313" height="20" uuid="6a2c7bca-7f2c-406a-9f2b-4a8effaa86bd"/>
 				<textFieldExpression><![CDATA[$F{ten_nv}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="141" y="24" width="100" height="20" uuid="1bff67c5-a75e-4816-8b5f-e69b99da9a11"/>
+				<reportElement x="141" y="24" width="313" height="20" uuid="1bff67c5-a75e-4816-8b5f-e69b99da9a11"/>
 				<textFieldExpression><![CDATA[$F{sdt}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="141" y="44" width="100" height="20" uuid="e880ad3b-14c7-44ad-8779-48a191207525"/>
+				<reportElement x="141" y="44" width="313" height="20" uuid="e880ad3b-14c7-44ad-8779-48a191207525"/>
 				<textFieldExpression><![CDATA[$F{cnmd}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="141" y="64" width="100" height="20" uuid="50aca790-84bd-4e6f-97d1-02236a863f32"/>
+				<reportElement x="141" y="64" width="313" height="20" uuid="50aca790-84bd-4e6f-97d1-02236a863f32"/>
 				<textFieldExpression><![CDATA[$F{ngay_sinh}]]></textFieldExpression>
 			</textField>
 			<staticText>
