--- a/src/Reports/KhuVuc.jrxml
+++ b/src/Reports/KhuVuc.jrxml
@@ -34,7 +34,7 @@
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[BÁO CÁO DANH SÁCH NHÂN VIÊN]]></text>
+				<text><![CDATA[BÁO CÁO DANH SÁCH KHU VỰC]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="0" width="359" height="20" uuid="98a1ef23-50fe-47f8-bf05-ac94de533270"/>
