--- a/src/Reports/NhaCungCap.jrxml
+++ b/src/Reports/NhaCungCap.jrxml
@@ -40,7 +40,7 @@
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[BÁO CÁO DANH SÁCH NHÂN VIÊN]]></text>
+				<text><![CDATA[BÁO CÁO DANH SÁCH NHÀ CUNG CẤP]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="0" width="359" height="20" uuid="241f618a-62cd-4fde-9612-d3db19e3c3f3"/>
