--- a/src/Views/fNhacungcap.form
+++ b/src/Views/fNhacungcap.form
@@ -132,14 +132,16 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="jScrollPane7" alignment="0" pref="1302" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
                                   <Component id="jButtonThem" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jButtonExcel" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jTextFieldSearch" min="-2" pref="257" max="-2" attributes="0"/>
+                                  <Component id="jTextFieldSearch" min="-2" pref="260" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jButtonTimKiem" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jScrollPane7" pref="1302" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -148,18 +150,12 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                  <Component id="jTextFieldSearch" min="-2" pref="31" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jButtonThem" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                                      <Component id="jButtonExcel" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jButtonThem" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="jButtonExcel" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="jTextFieldSearch" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButtonTimKiem" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPane7" min="-2" pref="441" max="-2" attributes="0"/>
@@ -241,7 +237,7 @@
                       </Events>
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable(model)"/>
-                        <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="ArrayList&lt;NguonCungCap&gt; arr = daoNguonCungCap.getInstance().getListNguonCungCap();&#xa;String[] columnName = {&quot;STT&quot;, &quot;T&#xea;n nh&#xe0; cung c&#x1ea5;p&quot;, &quot;&#x110;&#x1ecb;a ch&#x1ec9;&quot;, &quot;S&#x1ed1; &#x111;i&#x1ec7;n tho&#x1ea1;i&quot;, &quot;Email&quot;, &quot;Ng&#x1b0;&#x1edd;i &#x111;&#x1ea1;i di&#x1ec7;n&quot;};&#xa;Object[][] rows = new Object[arr.size()][7];&#xa;        for(int i = 0; i &lt; arr.size(); i++){&#xa;            rows[i][0] = arr.get(i).id_nguon_cc;&#xa;            rows[i][1] = arr.get(i).ten_nha_cc;&#xa;            rows[i][2] = arr.get(i).dia_chi;&#xa;            rows[i][3] = arr.get(i).sdt;&#xa;            rows[i][4] = arr.get(i).email;&#xa;            rows[i][5] = arr.get(i).ten_dai_dien;&#xa;            /*&#xa;            if(arr.get(i).hinh_anh != null){&#xa;            ImageIcon image = new ImageIcon(new ImageIcon(arr.get(i).hinh_anh).getImage().getScaledInstance(50, 50, Image.SCALE_SMOOTH) );     &#xa;            //ImageIcon image = new ImageIcon(arr.get(i).hinh_anh);   &#xa;            //ImageIcon image = new ImageIcon(getClass().getResource(&quot;/Image/fXuatKho.jpg&quot;));  &#xa;            rows[i][6] = image;&#xa;            &#xa;            }&#xa;            else{&#xa;                rows[i][6] = &quot;Ch&#x1b0;a c&#xf3; h&#xec;nh &#x1ea3;nh&quot;;&#xa;            }&#xa;*/&#xa;        }&#xa;DefaultTableModel model = new DefaultTableModel (rows,columnName)&#xa;{&#xa;    @Override&#xa;    public Class getColumnClass(int c) {&#xa;        switch (c)&#xa;    &#xa;    {&#xa;        //case 6:&#xa;        //return ImageIcon.class;&#xa;        default:&#xa;        return Object.class;&#xa;    }&#xa;        }&#xa;        @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;       //all cells false&#xa;       return false;&#xa;    }&#xa;};"/>
+                        <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="ArrayList&lt;NguonCungCap&gt; DuLieuMau = daoNguonCungCap.getInstance().getListNguonCungCap();&#xa;String[] columnName = {&quot;STT&quot;, &quot;T&#xea;n nh&#xe0; cung c&#x1ea5;p&quot;, &quot;&#x110;&#x1ecb;a ch&#x1ec9;&quot;, &quot;S&#x1ed1; &#x111;i&#x1ec7;n tho&#x1ea1;i&quot;, &quot;Email&quot;, &quot;Ng&#x1b0;&#x1edd;i &#x111;&#x1ea1;i di&#x1ec7;n&quot;};&#xa;Object[][] rows = new Object[DuLieuMau.size()][7];&#xa;        for(int i = 0; i &lt; DuLieuMau.size(); i++){&#xa;            rows[i][0] = DuLieuMau.get(i).id_nguon_cc;&#xa;            rows[i][1] = DuLieuMau.get(i).ten_nha_cc;&#xa;            rows[i][2] = DuLieuMau.get(i).dia_chi;&#xa;            rows[i][3] = DuLieuMau.get(i).sdt;&#xa;            rows[i][4] = DuLieuMau.get(i).email;&#xa;            rows[i][5] = DuLieuMau.get(i).ten_dai_dien;&#xa;            /*&#xa;            if(DuLieuMau.get(i).hinh_anh != null){&#xa;            ImageIcon image = new ImageIcon(new ImageIcon(DuLieuMau.get(i).hinh_anh).getImage().getScaledInstance(50, 50, Image.SCALE_SMOOTH) );     &#xa;            //ImageIcon image = new ImageIcon(DuLieuMau.get(i).hinh_anh);   &#xa;            //ImageIcon image = new ImageIcon(getClass().getResource(&quot;/Image/fXuatKho.jpg&quot;));  &#xa;            rows[i][6] = image;&#xa;            &#xa;            }&#xa;            else{&#xa;                rows[i][6] = &quot;Ch&#x1b0;a c&#xf3; h&#xec;nh &#x1ea3;nh&quot;;&#xa;            }&#xa;*/&#xa;        }&#xa;DefaultTableModel model = new DefaultTableModel (rows,columnName)&#xa;{&#xa;    @Override&#xa;    public Class getColumnClass(int c) {&#xa;        switch (c)&#xa;    &#xa;    {&#xa;        //case 6:&#xa;        //return ImageIcon.class;&#xa;        default:&#xa;        return Object.class;&#xa;    }&#xa;        }&#xa;        @Override&#xa;    public boolean isCellEditable(int row, int column) {&#xa;       //all cells false&#xa;       return false;&#xa;    }&#xa;};"/>
                         <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="/*"/>
                       </AuxValues>
                     </Component>
@@ -272,16 +268,34 @@
                     </Property>
                   </Properties>
                   <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldSearchActionPerformed"/>
                     <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldSearchKeyReleased"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="jButtonExcel">
                   <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="ImageIcon img = new ImageIcon(getClass().getResource(&quot;/icon/icons8-microsoft-excel-40.png&quot;));&#xa;ImageIcon Img = new ImageIcon(img.getImage().getScaledInstance(19, 19, Image.SCALE_SMOOTH));&#xa;jButtonExcel.setIcon(Img);">
+                      <Font name="Tahoma" size="14" style="0"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Excel"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonExcelActionPerformed"/>
                   </Events>
+                </Component>
+                <Component class="javax.swing.JButton" name="jButtonTimKiem">
+                  <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor" postCode="ImageIcon imgTimKiem = new ImageIcon(getClass().getResource(&quot;/icon/icons8-search.png&quot;));&#xa;ImageIcon ImgTimKiem = new ImageIcon(imgTimKiem.getImage().getScaledInstance(19, 19, Image.SCALE_SMOOTH));&#xa;jButtonTimKiem.setIcon(ImgTimKiem);">
+                      <Font name="Tahoma" size="14" style="0"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
